[tool.poetry]
name = "test_tasks"
version = "0.1.0"
description = ""
authors = ["Matvei Riabinin <ryabinin.m.b@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
numpy = "^1.22.4"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
